--- a/style.css
+++ b/style.css
@@ -121,6 +121,10 @@ margin-right: 20px;
 /* margin-top: 40px; */
 margin-bottom: 0px;
 }
+.price p{
+color: #977900;
+font-weight: 400px;
+}
 .phase1 {
 /* height: 280px; */
 margin-top: 30px;
@@ -128,6 +132,16 @@ width: 300px;
 background-color: rgb(218, 220, 221);
 }
 img.tshat {
+margin-top: 20px;
+margin-bottom: 20px;
+margin-left: 60px;
+}
+.phase2 {
+margin-top: 30px;
+width: 300px;
+background-color: rgb(218, 220, 221);
+}
+img.pant {
 margin-top: 20px;
 margin-bottom: 20px;
 margin-left: 60px;
