--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ margin-top: 20px;
 } 
 .displays {
 display: flex;
+flex-wrap: wrap;
 justify-content: space-evenly;
 }
 .phase:hover {
@@ -167,7 +168,7 @@ text-align: right;
 span hr.line {
 width: 95%;
 margin-left: 70px;
-margin-top: 50px;
+margin-top: 70px;
 margin-bottom: 20px;
 float: left;
 }
@@ -175,5 +176,24 @@ img.jacket {
 margin-top: 20px;
 margin-bottom: 25px;
 margin-left: 60px;
+}
+img.shoes {
+margin-top: 50px;
+margin-bottom: 100px;
+margin-left: 60px;
+}
+.dot4 {
+height: 20px;
+width: 20px;
+background-color: rgb(255, 81, 0);
+border-radius: 50%;
+display: inline-block;
+}
+.dot5 {
+height: 20px;
+width: 20px;
+background-color: rgb(255, 255, 255);
+border-radius: 50%;
+display: inline-block;
 }
 
